# ipybuilding

./: .gitignore  .readthedocs.yml  LICENSE.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_testing.txt  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  install.rst  overview.rst
docs/source/API/: datasets.rst  index.rst
ipybuilding/: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  __init__.py  _version.py  codecov.yml  environment-ipybuildings.yml  environment.yml  install.json  ipybuilding.json  package.json  pytest.ini  requirements.txt  setup.py  webpack.config.js
ipybuilding/datasets/: __init__.py
ipybuilding/datasets/geneva/: __init__.py  geneva.py
ipybuilding/docs/: Makefile  environment.yml  make.bat
ipybuilding/docs/source/: conf.py  develop-install.rst  (+2 more)
ipybuilding/examples/: introduction.ipynb
ipybuilding/ipybuilding/: __init__.py  _frontend.py  _version.py  example.py
ipybuilding/notebooks/: 03 - Event handlers and data selection in pydeck.ipynb  gltf test.ipynb  gml copy.ipynb  gml export to gpkg.ipynb  gml.ipynb  gpkg.ipynb  p3.ipynb  test.ipynb
ipybuilding/src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
ipybuilding/utils/: __init__.py  _config.py
tutorials/: Geneva 3D buildings.ipynb  README.rst  gml export to gpkg.ipynb  gpkg.ipynb  index.rst  kml.ipynb  p3.ipynb
tutorials/Geneva/: README.rst  SCANE_INDICE_DERNIER.csv  output.html  plot_heat_demand.py
tutorials/datasets/: README.rst  plot_geneva.py
tutorials/geneva/: plot_geneva.py
(+7 files in other folders)
