[tool.poetry]
name = "ipybuilding"
version = "0.1.0"
description = "Examples for showing 3D building data in pydeck"
authors = ["Jonathan Chambers <jon.chambers3001@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydeck = "^0.7.1"
geopandas = "^0.10.2"
Fiona = "^1.8.21"
notebook = "^6.4.11"
ipywidgets = "^7.7.0"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
